# CryoZeta

./: .gitignore  .pre-commit-config.yaml  Apptainer.def  README.md  WEIGHT_LICENSE.md  env_setup.sh  inference_demo.sh  initialize_script.sh  large_inference_demo.sh  pyproject.toml  ruff.toml  run_cryozeta.sh  run_examples.sh  update_sif.md
examples/: 9bh4.json  9dci.json  9j8v.json  example.json  test_200.json
examples/msa/prot/42e5ee12c1203232498a149fbfad89a89bd56539cfd24c9f2490d1256175cefd/: mmseqs_other_hits.a3m  uniref100_hits.a3m
examples/msa/rna/615ee634ed5bcba2af15514c9b0a45ebc04a5d44511f1b5e55249670d7b48f58/: rnacentral.a3m
scripts/: profile_memory.py  profile_memory_nsys.py  run_memory_profile.sh  run_memory_profile_nsys.sh
src/cryozeta/configs/: __init__.py  config.py  configs_base.py  configs_data.py  configs_inference.py  extend_types.py
src/cryozeta/data/: ccd.py  constants.py  data_em.py  data_pipeline.py  data_transforms_em.py  featurizer.py  infer_data_pipeline.py  json_parser.py  json_to_feature.py  msa_featurizer.py  msa_utils.py  parser.py  substructure_perms.py  tokenizer.py  utils.py
src/cryozeta/em/: __init__.py  blocks.py  map.py  munet.py  strucblur.py  utils.py
src/cryozeta/metrics/: clash.py
src/cryozeta/model/: cryozeta.py  generator.py  sample_confidence.py  utils.py
src/cryozeta/model/layer_norm/: __init__.py  layer_norm.py  torch_ext_compile.py
src/cryozeta/model/layer_norm/kernel/: layer_norm_cuda_kernel.cu
src/cryozeta/model/modules/: calc_descriptors.py  confidence.py  diffusion.py  em_module.py  embedders.py  empairformer.py  fitting.py  head.py  opm_tilelang.py  primitives.py  transformer.py
src/cryozeta/openfold_local/: __init__.py
src/cryozeta/openfold_local/data/: msa_identifiers.py  msa_pairing.py  parsers.py
src/cryozeta/openfold_local/data/tools/: jackhmmer.py  utils.py
src/cryozeta/openfold_local/model/: dropout.py  msa.py  outer_product_mean.py  primitives.py  triangular_attention.py  triangular_multiplicative_update.py
src/cryozeta/openfold_local/np/: residue_constants.py
src/cryozeta/openfold_local/utils/: checkpointing.py  chunk_utils.py  precision_utils.py  tensor_utils.py
src/cryozeta/runner/: combine.py  combine_stages.py  cycle_predict.py  dumper.py  inference.py  inference_detection.py  prepare_json.py  prepare_json_ui.py
src/cryozeta/runner/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
src/cryozeta/runner/ui/src/: App.tsx  index.css  types.ts  validation.ts
src/cryozeta/runner/ui/src/components/: EntityCard.tsx  EntryCard.tsx  LaunchDialog.tsx  SequenceInput.tsx
src/cryozeta/utils/: cropping.py  distributed.py  em_utils.py  file_io.py  geometry.py  scatter_utils.py  seed.py  torch_utils.py
