[project]
name = "cryozeta"
version = "0.1.0"
description = "CryoZeta is a de novo macromolecular structure modeling tool that integrates cryo-EM density information with a diffusion-model-based structure prediction pipeline."
readme = "README.md"
authors = [
    { name = "Zicong Zhang", email = "zhan1797@purdue.edu" },
    { name = "Shu Li", email = "li3916@purdue.edu" },
    { name = "Boyuan Liu", email = "liu3852@purdue.edu" }
]
classifiers = [
    "Operating System :: POSIX :: Linux"
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "biopython>=1.85",
    "biotite == 1.0.1",
    "deepspeed>=0.16.7",
    "dm-tree>=0.1.9",
    "einops>=0.8.1",
    "gemmi>=0.7.1",
    "huggingface-hub>=0.33.0",
    "icecream>=2.1.4",
    "ipdb>=0.13.13",
    "jaxtyping>=0.3.2",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "modelcif>=1.3",
    "mrcfile>=1.5.4",
    "numba>=0.61.2",
    "numpy<2.0.0",
    "pandas>=2.2.3",
    "pdbeccdutils>=0.8.5",
    "protobuf>=6.30.2",
    "py3dmol>=2.4.2",
    "ray[default]>=2.49.2",
    "rdkit>=2025.3.2",
    "safetensors>=0.6.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "tos>=2.8.3",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "wandb>=0.19.11",
    "shot-fpfh",
    "open3d>=0.19.0",
    "small-gicp<2.0",
    "vesper",
]

[project.scripts]
cryozeta-detection = "cryozeta.runner.inference_detection:app"
cryozeta-inference = "cryozeta.runner.inference:cli"
cryozeta-combine = "cryozeta.runner.combine:app"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.2",
    "ruff>=0.12.0",
]

[tool.uv.sources]
shot-fpfh = { git = "https://github.com/aubin-tchoi/shot-fpfh" }
vesper = { git = "https://github.com/kiharalab/VESPER_CUDA.git", rev = "main" }
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
