[project]
name = "cryozeta"
version = "0.1.0"
description = "CryoZeta is a de novo macromolecular structure modeling tool that integrates cryo-EM density information with a diffusion-model-based structure prediction pipeline."
readme = "README.md"
authors = [
    { name = "Zicong Zhang", email = "zhan1797@purdue.edu" },
    { name = "Shu Li", email = "li3916@purdue.edu" },
    { name = "Boyuan Liu", email = "liu3852@purdue.edu" },
    { name = "Han Zhu", email = "zhu773@purdue.edu" }
]
classifiers = [
    "Operating System :: POSIX :: Linux"
]
requires-python = ">=3.12,<3.13"

[project.scripts]
cryozeta-detection = "cryozeta.runner.inference_detection:app"
cryozeta-inference = "cryozeta.runner.inference:cli"
cryozeta-combine = "cryozeta.runner.combine:app"
cryozeta-prepare = "cryozeta.runner.prepare_json:app"

[tool.pixi.workspace]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["linux-64"]
channel-priority = "disabled"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://em.kiharalab.org/algorithm/CryoZeta"
repository = "https://github.com/kiharalab/CryoZeta"

[tool.pixi.activation]
scripts = ["env_setup.sh"]

[tool.pixi.tasks]
download-weights = "python -c \"from huggingface_hub import snapshot_download; snapshot_download('KiharaLab/CryoZeta', repo_type='model', local_dir='assets')\""
clone-teaser = "test -d externals/TEASER-plusplus || (mkdir -p externals && git clone --depth 1 https://github.com/MIT-SPARK/TEASER-plusplus.git externals/TEASER-plusplus)"
build-teaser = { cmd = "test -f externals/TEASER-plusplus/build/libteaser.so || (cmake -S externals/TEASER-plusplus -B externals/TEASER-plusplus/build -DCMAKE_BUILD_TYPE=Release -DBUILD_PYTHON_BINDINGS=ON -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=OFF && cmake --build externals/TEASER-plusplus/build -j$(nproc))", depends-on = ["clone-teaser"] }
setup = { cmd = "sh -c 'echo \"==> Detected PIXI_ENV: $PIXI_ENV\" && if [ \"$PIXI_ENV\" != \"default\" ]; then echo \"==> Installing environment: $PIXI_ENV\" && pixi install -e \"$PIXI_ENV\"; fi && echo \"==> Setup complete!\"'", depends-on = ["download-weights", "build-teaser"] }


[tool.pixi.system-requirements]
linux = "4.18"
libc = { family = "glibc", version = "2.31" }

[tool.pixi.dependencies]
pytorch-gpu = "*"
torchvision = "*"
numpy = "<2.0.0"
boost = ">=1.82"
libboost-devel = ">=1.82"
eigen = "3.4.*"
cutlass = "*"

[tool.pixi.feature.cu11.dependencies]
cuda-version = "11.8.*"
cudatoolkit = "11.8.*"
pytorch-gpu = ">=2.0.0,<2.5.0"

[tool.pixi.feature.cu11.system-requirements]
cuda = "11.0"

[tool.pixi.feature.cu12.dependencies]
cuda-version = { version = "12.8.*", channel = "nvidia" }
cuda = { version = "12.8.*", channel = "nvidia" }
pytorch-gpu = ">=2.7.0"

[tool.pixi.feature.cu12.system-requirements]
cuda = "12.0"

[tool.pixi.feature.cu13.dependencies]
cuda-version = { version = "13.*", channel = "nvidia" }
cuda = { version = "13.*", channel = "nvidia" }
pytorch-gpu = ">=2.7.0"

[tool.pixi.feature.cu13.system-requirements]
cuda = "13.0"

[tool.pixi.pypi-dependencies]
cryozeta = { path = ".", editable = true }
biopython = ">=1.85"
biotite = "==1.0.1"
deepspeed = ">=0.16.7"
dm-tree = ">=0.1.9"
einops = ">=0.8.1"
gemmi = ">=0.7.1"
huggingface-hub = ">=0.33.0"
icecream = ">=2.1.4"
ipdb = ">=0.13.13"
jaxtyping = ">=0.3.2"
jupyter = ">=1.1.1"
loguru = ">=0.7.3"
matplotlib = ">=3.10.3"
ml-collections = ">=1.1.0"
modelcif = ">=1.3"
mrcfile = ">=1.5.4"
numba = ">=0.61.2"
pandas = ">=2.2.3"
pdbeccdutils = ">=0.8.5"
protobuf = ">=6.30.2"
py3dmol = ">=2.4.2"
ray = { version = ">=2.49.2", extras = ["default"] }
rdkit = ">=2025.3.2"
safetensors = ">=0.6.2"
scikit-image = ">=0.25.2"
scikit-learn = ">=1.6.1"
scipy = ">=1.15.3"
tos = ">=2.8.3"
tqdm = ">=4.67.1"
typer = ">=0.16.0"
wandb = ">=0.19.11"
shot-fpfh = { git = "https://github.com/aubin-tchoi/shot-fpfh" }
open3d = ">=0.19.0"
small-gicp = "<2.0"
vesper = { git = "https://github.com/kiharalab/VESPER_CUDA.git", branch = "main" }

[tool.pixi.feature.dev.pypi-dependencies]
prek = ">=0.3.2"
ruff = ">=0.12.0"

[tool.pixi.environments]
default = { features = ["cu12"], solve-group = "default" }
cu11 = { features = ["cu11"], solve-group = "cu11" }
cu13 = { features = ["cu13"], solve-group = "cu13" }
dev = { features = ["dev", "cu12"], solve-group = "default" }
dev-cu11 = { features = ["dev", "cu11"], solve-group = "cu11" }
dev-cu13 = { features = ["dev", "cu13"], solve-group = "cu13" }
